# clutter_manager

./: .gitignore  CMakeLists.txt  README.md
concepts/: learning.txt
src/: main.cpp
src/Storage/: Database.cpp  Database.h
src/analysis/: AnalysisResults.h  ClutterAnalysis.cpp  ClutterAnalysis.h  FileType.h  FileTypeUtils.cpp  FileTypeUtils.h
src/common/: FileInfo.h
src/controller/: controller.cpp  controller.h
src/scanner/: FileScanner.cpp  FileScanner.h
